--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
        <header><h4>Chart By: Monica Pagan</h4>
+         <h2>Here are the number of deaths from COVID-19 in Massachusetts, Pennsylvania, New York, and New Jersey.</h2>
         </header>
-      <footer>Here are the number of deaths from COVID-19 in Massachusetts, Pennsylvania, New York, and New Jersey. </footer>
+    
     
   <script type="text/javascript">
     google.charts.load("current", {packages:['corechart']});
