--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
        <header><h4>Chart By: Monica Pagan</h4>
-         <h1>Here are the number of deaths from COVID-19 in Massachusetts, Pennsylvania, New York, and New Jersey.</h1>
+         <footer>Here are the number of deaths from COVID-19 in Massachusetts, Pennsylvania, New York, and New Jersey.</footer>
         </header>
     
     
