--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                        2]);
 
       var options = {
-        title: "Deaths from COVID-19",
+        title: "Deaths from COVID-19 as of April 16, 2020",
         width: 600,
         height: 400,
         bar: {groupWidth: "95%"},
